[package]
name = "own-repos-curator-to-hatena"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "own-repos-curator-to-hatena"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
