[package]
name = "own-repos-curator-to-hatena"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "own-repos-curator-to-hatena"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
cat-self-update-lib = { git = "https://github.com/cat2151/cat-self-update", package = "cat-self-update-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
unicode-normalization = "0.1"
